--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ body {
 .abcd {
     color: red;
     text-align: center;
+    font-size: 100px;
     animation: danger 2s linear 1s infinite normal none;
 }
 
@@ -536,10 +537,13 @@ h5 {
     0% {
         transform: rotate(0deg);
     }
-    25% {
-        transform: rotate(110deg);
+    37% {
+        transform: rotate(0deg);
     }
     50% {
+        transform: rotate(110deg);
+    }
+    62% {
         transform: rotate(85deg);
     }
     75% {
