--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     margin-left: -10px;
 }
 .scene {
-    margin-top: 7vh;
+    margin-top: 0px;
     background-color:black;
     background-image:
     radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
@@ -83,14 +83,25 @@ body {
     background-position: 0 0, 45px 65px, 135px 275px, 75px 105px;
     display: grid;
     grid-template-columns: repeat(10, 10vw);
-    grid-template-rows: repeat(4, 6.6vh);
+    grid-template-rows: repeat(5, 6.6vh);
 }
 
 .thea {
-    grid-row: 1 / 4;
+    grid-row: 1 / 5;
     grid-column: 1 /10;
-    height: 30vh;
+    height: 33vh;
     width: 100vw;
+}
+
+#bouton {
+    grid-row: 3;
+    grid-column: 5 / 7;
+    color:white;
+}
+
+#bouton :hover {
+    color: red;
+    font-style: bold;
 }
 
 .abcd {
@@ -103,7 +114,6 @@ body {
 .abcde {
     grid-row: 2;
     grid-column: 5 / 7;
-    color:white;
     text-align: center;
     font-size: 50px;
     animation: secoue 1s linear 1s infinite normal none;
@@ -170,19 +180,19 @@ h5 {
 }
 .mot1 {
     grid-column: 7 / 8;
-    grid-row: 6;
+    grid-row: 7;
     font-size: 30px;
     animation: -croissant 10s linear 2s infinite normal none;
 }
 .mot2 {
     grid-column: 8 / 9;
-    grid-row: 10;
+    grid-row: 11;
     font-size: 30px;
     animation: -moveX 10s linear 2s infinite normal none;
 }
 .mot3 {
     grid-column: 7 / 8;
-    grid-row: 14;
+    grid-row: 15;
     font-size: 30px;
     animation: -decroissant 10s linear 2s infinite normal none;
     transform: rotate(45);
@@ -204,19 +214,19 @@ h5 {
 }
 .mot1by {
     grid-column: 3 / 4;
-    grid-row: 6;
+    grid-row: 7;
     font-size: 30px;
     animation: decroissant 10s linear 2s infinite normal none;
 }
 .mot2by {
     grid-column: 2 / 3;
-    grid-row: 10;
+    grid-row: 11;
     font-size: 30px;
     animation: moveX 10s linear 2s infinite normal none;
 }
 .mot3by {
     grid-column: 3 / 4;
-    grid-row: 14;
+    grid-row: 15;
     font-size: 30px;
     animation: croissant 10s linear 2s infinite normal none;
 }
