--- a/style.css
+++ b/style.css
@@ -125,11 +125,13 @@ h1{
     width: 40vw;
 }
 h2{
+    font-family: 'Amatic SC', cursive;
 }
 h3{
     font-family: 'parisienne';
 }
 h4 {
+    font-family: 'Monoton', cursive;
 }
 h5 {
     font-family: 'ohthehorror';
